fix(dashboard-widget): fix grid column spacing and title of widget.

--- a/plugins/movie-library/assets/css/dashboard-style.scss
+++ b/plugins/movie-library/assets/css/dashboard-style.scss
@@ -20,9 +20,8 @@
 		position: relative;
 		background-color: #e5e5e5;
 		line-height: 100%;
-		margin-bottom: .6em;
-		display: inline-block;
 		width: 100%;
+		margin: 0;
 	}
 
 	.movie-card__image {
